[package]
name = "gi-toolkit-ng"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming", # For GetPrivateProfileStringW
    "Win32_UI_WindowsAndMessaging",    # For MessageBoxW
    "Win32_Security",
] }

[profile.release]
panic = "abort"
lto = true